try to access to sanity studio

--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@mui/material": "^5.14.20",
     "@mui/system": "^5.14.20",
     "@mui/x-date-pickers": "^6.18.4",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^6.20.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.47.1",
     "@syncfusion/ej2-base": "24.2.8",
     "@syncfusion/ej2-maps": "^26.1.35",
     "@syncfusion/ej2-react-maps": "24",
@@ -39,6 +43,7 @@
     "lodash.merge": "^4.6.2",
     "mui-one-time-password-input": "^2.0.1",
     "next": "^14.0.4",
+    "next-sanity": "^9.4.2",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
@@ -47,8 +52,10 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-player": "^2.13.0",
     "react-slick": "^0.29.0",
+    "sanity": "^3.47.1",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.11",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
     "yet-another-react-lightbox": "^3.15.6",
