working on deploying sanity studio

--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "version": "2.4.0",
   "description": "Next & TypeScript",
   "private": true,
-  "scripts": {
-    "dev": "next dev -p 8002",
-    "start": "next start -p 8002",
-    "build": "next build",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
-    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "rm:all": "rm -rf node_modules .next out dist build",
-    "re:start": "yarn rm:all && yarn install && yarn dev",
-    "re:build": "yarn rm:all && yarn install && yarn build",
-    "re:build-npm": "npm run rm:all && npm install && npm run build",
-    "dev:ts": "yarn dev & yarn ts:watch",
-    "ts": "tsc --noEmit --incremental",
-    "ts:watch": "yarn ts --watch"
-  },
+"scripts": {
+  "dev": "next dev -p 8002",
+  "start": "next start -p 8002",
+  "build": "next build && npm run build:sanity",
+  "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+  "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
+  "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+  "rm:all": "rm -rf node_modules .next out dist build",
+  "re:start": "yarn rm:all && yarn install && yarn dev",
+  "re:build": "yarn rm:all && yarn install && yarn build",
+  "re:build-npm": "npm run rm:all && npm install && npm run build",
+  "dev:ts": "yarn dev & yarn ts:watch",
+  "ts": "tsc --noEmit --incremental",
+  "ts:watch": "yarn ts --watch",
+  "build:sanity": "cd studio && sanity build"
+},
+
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
@@ -53,6 +55,7 @@
     "react-player": "^2.13.0",
     "react-slick": "^0.29.0",
     "sanity": "^3.47.1",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
