--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 "scripts": {
   "dev": "next dev -p 8002",
   "start": "next start -p 8002",
-  "build": "next build && npm run build:sanity",
+  "build": "next build && cd studio && sanity build",
   "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
   "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
   "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
