--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@mui/material": "^5.14.20",
     "@mui/system": "^5.14.20",
     "@mui/x-date-pickers": "^6.18.4",
+    "@portabletext/react": "^3.1.0",
+    "@portabletext/types": "^2.0.13",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.20.1",
     "@sanity/image-url": "^1.0.2",
