working on campagnes page

--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "@sanity/vision": "^3.47.1",
     "@syncfusion/ej2-base": "24.2.8",
     "@syncfusion/ej2-maps": "^26.1.35",
+    "@syncfusion/ej2-react-buttons": "^24.2.7",
+    "@syncfusion/ej2-react-grids": "^24.2.9",
     "@syncfusion/ej2-react-maps": "24",
+    "@syncfusion/ej2-react-pdfviewer": "^26.2.4",
+    "@syncfusion/ej2-react-popups": "^24.2.10",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "google-map-react": "^2.2.1",
@@ -52,6 +56,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-pdf": "^9.1.0",
     "react-player": "^2.13.0",
     "react-slick": "^0.29.0",
     "sanity": "^3.47.1",
