--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@portabletext/react": "^3.1.0",
     "@portabletext/types": "^2.0.13",
     "@sanity/block-content-to-react": "^3.0.0",
-    "@sanity/client": "^6.20.1",
+    "@sanity/client": "^6.21.1",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/react-loader": "^1.10.4",
     "@sanity/vision": "^3.47.1",
+    "@sanity/visual-editing": "^2.1.6",
     "@syncfusion/ej2-base": "24.2.8",
     "@syncfusion/ej2-maps": "^26.1.35",
     "@syncfusion/ej2-react-buttons": "^24.2.7",
@@ -54,6 +56,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-lazy-load-image-component": "^1.6.0",
     "react-pdf": "^9.1.0",
@@ -66,6 +69,7 @@
     "styled-components": "^6.1.11",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
+    "swr": "^2.2.5",
     "yet-another-react-lightbox": "^3.15.6",
     "yup": "^1.3.2"
   },
@@ -77,6 +81,7 @@
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.43",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-lazy-load-image-component": "^1.6.3",
     "@types/react-slick": "^0.23.12",
     "@types/stylis": "^4.2.4",
