--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "ts:watch": "yarn ts --watch"
   },
   "dependencies": {
+    "@babel/runtime": "^7.25.6",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
+    "@lezer/common": "^1.2.1",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
     "@mui/system": "^5.14.20",
@@ -33,8 +35,11 @@
     "@portabletext/types": "^2.0.13",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.21.3",
+    "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/react-loader": "^1.10.4",
+    "@sanity/types": "^3.57.4",
+    "@sanity/ui": "^2.8.9",
     "@sanity/vision": "^3.47.1",
     "@sanity/visual-editing": "^2.1.6",
     "@syncfusion/ej2-base": "24.2.8",
@@ -47,6 +52,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "google-map-react": "^2.2.1",
+    "jquery": "^3.7.1",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "mui-one-time-password-input": "^2.0.1",
@@ -58,6 +64,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
+    "react-is": "^18.3.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-pdf": "^9.1.0",
     "react-player": "^2.13.0",
